--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "seldi-homepage",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://dddeok.gihub.io/sedi-hompage",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
@@ -20,7 +21,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -41,7 +43,8 @@
     ]
   },
   "devDependencies": {
-    "typescript": "^4.5.5",
-    "@types/styled-components": "^5.1.21"
+    "@types/styled-components": "^5.1.21",
+    "gh-pages": "^3.2.3",
+    "typescript": "^4.5.5"
   }
 }
