--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "seldi-homepage",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://dddeok.github.io/sedi-hompage",
+  "homepage": "http://dddeok.github.io/seldi-hompage",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
